k8s/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: filmflix

spec:
  replicas: 2

  selector:
    matchLabels:
      app: admin

  template:
    metadata:
      labels:
        app: admin

    spec:
      containers:
      - name: admin
        image: whodeepaksoni/filmflix-admin:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 80
