k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: filmflix

spec:
  selector:
    app: admin

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
  type: ClusterIP
